# yolov8_detection_with_label_studio

./: README.md  pyproject.toml  requirements.txt
app_yolov8_detect/: 0-Coletando_Imagem_videos.ipynb  1_dataset_organization_label_studio.ipynb  2_treining_yolov8.ipynb  5-Predict_video_and_save copy.ipynb  5-Predict_video_and_save.ipynb  6-Predict_get_prob.ipynb  6-Predict_video_and_save.ipynb  7-Predict_change_name_box.ipynb  config.yaml  config_exemplo.yaml
app_yolov8_detect/utils/: utils.py
